# ec_group

./: CMakeLists.txt  Makefile  README.md  group.hpp  main  main.cpp  ot  ot.cpp
ec_group/: group.cpp  group.h  group_openssl.cpp  group_relic.h
test/: ot.cpp
